Updated Some Texts in  HTML file : index.html

--- a/About/index.html
+++ b/About/index.html
@@ -30,9 +30,9 @@
             <p id="p3">I studied in Syria,Lebanon,Egypt and now Turkey and I really likes that cuz I got info about 4 countries in my first 20 years which is really a good thing to have.</p>
         </div>
         <div id="me2" class="me text-center">
-            <h3>Who Am I?</h3>
+            <h3>What Can I do?</h3>
             <p id="p1">What Can I do? Well, I can create a whole program from zero to hero-lol- in C++ and even in C#.And now Im learning Web. HTML,CSS,Bootstrap,PHP and JS.</p>
-            <p id="p2">This Site is just the first site I made with HTML,CSS and it is working actually.You should give ti a try!</p>
+            <p id="p2">This Site is just the first site I made with HTML,CSS and it is working actually.You should give it a try!</p>
             <p id="p3">Please if you have any questions dont be shy and ask me by contacting me from the page Contact.Using your email or phone number with your First and Last Name and the Question.</p>
         </div>
 
