Updated links for nav-bar buttons in HTML Main: index.html

--- a/Main/index.html
+++ b/Main/index.html
@@ -20,12 +20,12 @@
 
         <div id="nav1" class="collapse navbar-collapse">
             <ul class="navbar-nav">
-                <li class="nav-item"><a class="nav-link" href="C:\Users\Black\Desktop\Web Projesi\CV\index.html" target="_blank">MySelf</a></li>
-                <li class="nav-item"><a class="nav-link" href="#" target="_blank">Şehrim</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Miras</a></li>
-                <li class="nav-item"><a class="nav-link" href="#" target="_blank">Hakkında</a></li>
-                <li class="nav-item"><a class="nav-link" href="#" target="_blank">İletişim</a></li>
-                <li class="nav-item"><a class="nav-link" href="#" target="_blank">Login</a></li>
+                <li class="nav-item"><a class="nav-link" href="C:\Users\Black\Desktop\Web Projesi\CV\index.html" target="_self">My CV</a></li>
+                <li class="nav-item"><a class="nav-link" href="C:\Users\Black\Desktop\Web Projesi\Sehrim\index.html" target="_self">My City</a></li>
+                <li class="nav-item"><a class="nav-link" href="#culture">Culture</a></li>
+                <li class="nav-item"><a class="nav-link" href="C:\Users\Black\Desktop\Web Projesi\About\index.html" target="_self">About Me</a></li>
+                <li class="nav-item"><a class="nav-link" href="C:\Users\Black\Desktop\Web Projesi\Contact\index.html" target="_self">Contact</a></li>
+                <li class="nav-item"><a class="nav-link" href="C:\Users\Black\Desktop\Web Projesi\Login\index.html" target="_self">Login</a></li>
 
             </ul>
         </div>
@@ -69,8 +69,8 @@
     </main>
     <hr id="hr1" />
     <br />
-    <section class="container">
-        <div class="text-center m-2 text-white">
+    <section id="culture" class="container">
+        <div class="text-center  text-white">
             <h3>Miras</h3>
             <p>Here you can learn soemthing about my city!</p>
         </div>
