--- a/Main/index.html
+++ b/Main/index.html
@@ -79,9 +79,11 @@
                 <div class="card">
                     <img src="images/dam1.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">DAM 1</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        <a href="#" class="btn btn-secondary">Get Info</a>
+                        <h5 class="card-title">Damascus House</h5>
+                        <p class="card-text">
+                        Many historic houses in Damascus are still occupied to this day! 
+                        One of the most prominent features of such houses is the central open courtyard.</p>
+                        <a href="https://medium.com/@SyriaFest/old-damascus-houses-38463de09a54#:~:text=Centuries%20old%2C%20many%20historic%20houses,cool%20off%20in%20the%20summer." class="btn btn-secondary">Get Info</a>
                     </div>
                 </div>
             </div>
@@ -89,9 +91,12 @@
                 <div class="card">
                     <img src="images/dam2.jpeg" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">DAM 2</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        <a href="#" class="btn btn-secondary">Get Info</a>
+                        <h5 class="card-title">Damascus City</h5>
+                        <p class="card-text">
+                        Damascus is the capital and largest city of Syria, 
+                        the oldest current capital in the world and, 
+                        according to some, the fourth holiest city in Islam.</p>
+                        <a href="https://en.wikipedia.org/wiki/Damascus" class="btn btn-secondary">Get Info</a>
                     </div>
                 </div>
             </div>
@@ -99,9 +104,13 @@
                 <div class="card">
                     <img src="images/dam3.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">DAM 3</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        <a href="#" class="btn btn-secondary">Get Info</a>
+                        <h5 class="card-title">Damascus Mosques</h5>
+                        <p class="card-text">
+                        Damascus is home to many Mosques, 
+                        each drawing from various periods of its history such as the Umayyad Caliphate, 
+                        Abbasid Caliphate, Fatimids, Ayyubids, 
+                        Ottoman Empire and finally the modern Syrian Arab Republic.</p>
+                        <a href="https://en.wikipedia.org/wiki/Umayyad_Mosque" class="btn btn-secondary">Get Info</a>
                     </div>
                 </div>
             </div>
@@ -109,29 +118,41 @@
                 <div class="card">
                     <img src="images/dam4.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">DAM 4</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        <a href="#" class="btn btn-secondary">Get Info</a>
+                        <h5 class="card-title">Damascus Miras</h5>
+                        <p class="card-text">
+                        The ritual concerned is a simple and intimate one that has been practised for centuries: 
+                        
+                        accompanied by music and singing, 
+                        
+                        the whirling dervishes of Damascus dance in a circle to get closer to God.</p>
+                        <a href="https://www.thetimes.co.uk/article/damascus-dances-defiant-tango-to-beat-of-artillery-3phgxb7gkqd" class="btn btn-secondary">Get Info</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4 p-5 col-md-6 col-12">
+                <div id="park" class="card">
+                    <img src="images/park2.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Archaeological Park</h5>
+                        <p class="card-text">
+
+                            A cafe conveniently situated opposite the Citadel and just round the corner from Souk Hamidiya.
+                            You can sit inside or on the roof overlooking the Environmental Garden.
+                            Relaxing surroundings away from the bustle of the Old Market.
+                        </p>
+                        <a href="https://www.tripadvisor.com/Attraction_Review-g294011-d324799-Reviews-Archaeological_Park-Damascus.html" class="btn btn-secondary">Get Info</a>
                     </div>
                 </div>
             </div>
             <div class="col-lg-4 p-5 col-md-6 col-12">
                 <div class="card">
-                    <img src="images/dam4.jpg" class="card-img-top" alt="...">
+                    <img src="images/dam5.webp" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">DAM 5</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        <a href="#" class="btn btn-secondary">Get Info</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-4 p-5 col-md-6 col-12">
-                <div class="card">
-                    <img src="images/dam4.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">DAM 6</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        <a href="#" class="btn btn-secondary">Get Info</a>
+                        <h5 class="card-title">Places To Visit</h5>
+                        <p class="card-text">
+                            If you were wondering what to see in Syria, Damascus has plenty to offer.Much of the Damascus historical sites are located in the Old City, also known as Bab Tuma.This is the same name as one of the seven old gates found in this part of the city.
+                        </p>
+                        <a href="https://www.unusualtraveler.com/top-things-to-do-in-damascus-syria/" class="btn btn-secondary">Get Info</a>
                     </div>
                 </div>
             </div>
